--- a/nre.html
+++ b/nre.html
@@ -7,10 +7,7 @@
     <title>Netflix</title>
 </head>
 <body>
-   <!--
-// v0 by Vercel.
-// https://v0.dev/t/MYWSHm8KZJa
--->
+
 
 <div class="flex flex-col min-h-screen bg-[#141414] text-white">
     <header class="sticky top-0 z-50 flex items-center justify-between px-4 py-3 bg-[#141414]/80 backdrop-blur-md">
@@ -151,7 +148,7 @@
           </a>
           <a class="group" href="#" rel="ugc">
             <img
-              src="https://lumiere-a.akamaihd.net/v1/images/au_marvel_shang-chiandthelegendofthetenrings_payoff_mov_cc4c0527.jpeg"
+              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRmpV0ISKS8cLFQhA3unxPHN6Ghmz78g0yrkLM-qwCTARlk2ciu"
               alt="Trending"
               width="300"
               height="450"
