--- a/nre.html
+++ b/nre.html
@@ -72,7 +72,7 @@
           <span class="sr-only">Notifications</span>
         </button>
         <span class="relative flex shrink-0 overflow-hidden rounded-full w-8 h-8 border-2 border-white">
-          <img class="aspect-square h-full w-full" alt="Profile" src="./pasport.jpg" />
+          <img class="aspect-square h-full w-full" alt="Profile" src="" />
         </span>
       </div>
     </header>
